--- a/Workspace/LoginPage/style.css
+++ b/Workspace/LoginPage/style.css
@@ -65,16 +65,15 @@ body{
     display: block;
 }
 .agreement{
-    /* border:3px solid #ddd; */
     margin: 3% auto -3% auto;
+
     display: flex;
     flex-direction: row;
-    /* width: fit-content; */
+    
     font-family: 'HYWenHei';
     font-size: 15px;
     font-style: normal;
     color: #FFFFFF;
-    /* margin: 0 auto 0 auto; */
 }
 .agreement > label{
     margin: auto 0 auto 10px;
@@ -82,95 +81,91 @@ body{
 }
 
 .agreement input{
-    display: inline-block;
-    margin: 0 0 0 0 ;
-    height: 25px;
     cursor: pointer;
+
+    margin: 0 0 0 0;
+
+    display: inline-block;
+    height: 25px;
     width: 25px;
 }
 
 .register{
-font-family: 'HYWenHei';
-font-style: normal;
-font-weight: 400;
-font-size: 40px;
-line-height: 49px;
-text-align: center;
-color: #FFFFFF;
-margin-bottom: 2.5%;
-margin-top: 2.5%;
+    margin-bottom: 2.5%;
+    margin-top: 2.5%;
+
+    font-family: 'HYWenHei';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 49px;
+    text-align: center;
+    color: #FFFFFF;
 }
 .age-area{
-    
-    /* border: solid black; */
-    
+    margin:  1% auto 0 auto;
+
+    width: 60%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    margin:  1% auto 0 auto;
-    
-    width: 60%;
+    justify-content: space-between; 
 }
-
-.age-area > input{
-    /* width: 100%; */
-}
-
 .up-down-buttons{
-    padding: auto;
-    display: flex;
-    
-    margin: 0;
     position: relative;
+    padding: auto;
+    margin: auto;
+    margin-left: 2%;
+    margin-top: 2%;
+
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* border: solid green; */
-    /* width: fit-content; */
-    margin: auto;
-    height: 7vh;
-    margin-left: 2%;
-    margin-top: 2%;
-    
+    height: 7vh;    
 }
 .up-down-buttons button{
     cursor: pointer;
+
     background-color: transparent;
+
     border: none;
 }
-.up-down-buttons img:hover{filter: drop-shadow(0px 0px 10px white);
+.up-down-buttons img:hover{
+    filter: drop-shadow(0px 0px 10px white);
 }
 .age-area button img{
     bottom:0;
     height: 100%;
-    /* width: fit-content; */
-    /* border: solid yellow; */
-    /* padding-top: 5px; */
     width: 100%;
-    transition: .5s;filter: drop-shadow(0px 0px 10px black);
+
+    filter: drop-shadow(0px 0px 10px black);
+    transition: .5s;
 }
 
 
 
 input{
+    background-color:#D9D9D9; 
+    outline: none; 
+    border: 3px solid rgba(255,255,255,0);
+
     position: relative;
-    width: 60%;
-    height: 7vh;
-    background-color:#D9D9D9;  
-    box-sizing: border-box;
-    border-radius: 10px;
-    font-weight: bold;
     margin:  2% auto 0 auto;
     padding: 0 3% 0 3%;
+    box-sizing: border-box;
+    border-radius: 10px;
+
+    width: 60%;
+    height: 7vh;
+    
+    font-weight: bold;
     font-size: 20px;
+
     transition: .5s;
-    outline: none;
-    border: 3px solid rgba(255,255,255,0);
-    -webkit-transition: 0.5s;
 }
 
 input[type=text]:focus, input[type=password]:focus, input[type=number]:focus, input[type=email]:focus{
-  border: 3px solid #555;
+    border: 3px solid #555;
 }
 input::placeholder{
     font-family: 'HYWenHei';
@@ -180,23 +175,26 @@ input::placeholder{
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 .signup{
+    cursor: pointer;
+    border: none;
+    border-radius: 20px;
+    background: #599ABE;
+
     font-family: 'HYWenHei';
     font-style: normal;
     font-size: 25px;
     margin:5% auto 3% auto;
     color: #FFFFFF;
-    border: none;
+
     width: 40%;
     height: 10vh;
-    background: #599ABE;
-    border-radius: 20px;
+
     transition: .5s;
-    cursor: pointer;
 }
 
 .signup:hover{
@@ -213,10 +211,11 @@ input::-webkit-inner-spin-button {
     
 }
 #CheckboxWarning{
+    padding: 5px 0 5px 0;
+    
     font-family: 'HYWenHei';
     font-style: bold;
     font-size: 15px;
-    padding: 5px 0 5px 0;
     color: red;
 }
 @media only screen and (max-width: 1278px){
