--- a/Workspace/MapScreen/style.css
+++ b/Workspace/MapScreen/style.css
@@ -1,10 +1,11 @@
 .mainBG{
-    /* margin-left: calc(5vw + 20px); */
-    color:#FFFFFF;
-    height: 100vh;
     background: url('Images/mainBG.svg');
     background-repeat: no-repeat;
     background-size: cover;
+
+    color:#FFFFFF;
+
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,24 +16,23 @@
 .left-navigation{
     position: fixed;
     margin-top: 100px;
-    height: calc(100vh - 120px);
     margin-left: 20px;
     margin-bottom: 20px;
-    /* background-color: red; */
+
+    height: calc(100vh - 120px);
     min-width: 5vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* z-index: 1000; */
 }
 
 .logo{
-    height: calc((100vh - 120px)/7);
-    /* border: solid white; */
-    /* background-color: green; */
     padding: 28px 0 2px 0;
     margin: auto auto auto auto;
+
+    height: calc((100vh - 120px)/7);
+
     filter: drop-shadow(0px 0px 4px black);
 }
 .logo img{
@@ -42,18 +42,23 @@
 
 }
 .seperator{
-    height: calc((100vh - 120px)/7);
+    background-color: white;
     border: solid white;
     margin: 0 auto 0 auto;
+
     width: 3px;
-    background-color: white;
+    height: calc((100vh - 120px)/7);
+    
     filter: drop-shadow(0px 0px 2px black);
 }
 
 .bg img, .bg2 img, .bg3 img, .bg4 img{
-    height: 20vh;
     cursor: pointer;
+
+    height: 20vh;
+
     filter: drop-shadow(0px 0px 10px #000000);
+
     transition: .5s;
 }
 .bg img:hover, .bg2 img:hover, .bg3 img:hover, .bg4 img:hover{
@@ -79,56 +84,35 @@
 
 
 .bg, .bg2, .bg3, .bg4{
-    
-    /* c */
     overflow: hidden;
     
     animation: MoveLeftRightBG 60s ease-in-out infinite;
+    background-position: bottom 10px left;
+    background-repeat: no-repeat;
+    background-size: 500%;
 
     opacity: 1; 
 
-    background-position: bottom 10px left;
     height: 100vh;
     width: 100vw;
-    background-repeat: no-repeat;
-    background-size: 500%;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 .arrow-next{
-    position: relative  ;
+    position: relative;    
+    margin-top: 10vh;
+
     width: 100px;
     height: 100px;
-    
-    margin-top: 10vh;
-    /* border: solid green; */
-    /* margin-right: auto; */
-    /* margin-right: auto; */
-    
+
     animation: MoveUpDown 2s infinite, pulse 2s ease-in-out infinite; 
 }
-@keyframes MoveUpDown {
-    50% {
-        bottom: 3vh;
-    }
-    0%, 100% {
-        bottom: 7vh;
-    }
-}
-@keyframes pulse {
-    0% { filter: drop-shadow(3px 4px 6px orange) }
-    50% { filter: drop-shadow(5px 12px 50px yellow) }
-    100% { filter: drop-shadow(3px 4px 6px orange) } 
-}
-@keyframes pulse-lantern {
-    0% { filter: drop-shadow(3px 4px 6px transparent) }
-    50% { filter: drop-shadow(0px 0px 19px black) }
-    100% { filter: drop-shadow(3px 4px 6px transparent) } 
-}
+
 
 .each-map-title{
-    color: white;
+    margin-bottom: 50px;
+
     font-family: 'HYWenHei';
     font-style: normal;
     font-weight: 400;
@@ -137,7 +121,6 @@
     text-align: center;
     color: #FFFFFF;
     text-shadow: 0px 4px 20px #000000;
-    margin-bottom: 50px;
 }
 
 .each-map-description{
@@ -147,9 +130,7 @@
     font-size: 30px;
     line-height: 37px;
     text-align: center;
-
     color: #FFFFFF;
-
     text-shadow: 0px 0px 40px #000000;
 }
 .mainTitle{
@@ -159,77 +140,76 @@
 }
 .mainDesc{
     margin: 2.5% auto 0 auto;
+
     width: 50vw;
+
     font-family: 'HYWenHei';
     font-style: normal;
     font-weight: 400;
-    font-size: px;
-    /* line-height: 26px; */
+    font-size: 26px;
     text-align: center;
-
     color: #FFFFFF;
-
     text-shadow: 0px 4px 20px #000000;
 }
 
 
-@keyframes MoveLeftRightBG {
-    0%, 100% {
-        background-position: bottom 20%  left;
-    }
-    50% {
-        background-position: bottom 20%  right;
-    }
-}
+
 /* Overlay pop uP */
 .overlayMenu
 {
   z-index: 1200;
   position: fixed;
+
   width: 100vw;
   height: 100vh;
 
 }
 .close-btn{
-  position: absolute;
-  height: 50px;
-  width: 50px;
+  cursor: pointer;
+
   background-image: url('Images/xClose.svg');
   background-size: contain;
   background-repeat: no-repeat;
+
+  position: absolute;
   right: 25px;
   top: 25px;
-  cursor: pointer;
+
+  height: 50px;
+  width: 50px;
 }
 .dimmer{
-  position: fixed;
   background-color: black;
+
+  position: fixed;
   border: solid yellow;
 }
 .bg-ovly{
+  background-color: rgba(0,0,0,0.5);
 
   position: fixed;
-    background-color: rgba(0,0,0,0.5);
-  
   top: 0;
   left: 0;
+
   height: 100vh;
   width: 100vw;
   
 }
 .bg-ovly2{
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
+
+  position: fixed;
   top: 2.5vh;
   left: 15vw;
-  position: fixed;
+  border-radius: 10px;
+
   width: 70vw;
   height: 95vh;
   display: flex;
   flex-direction: column;
-  backdrop-filter: blur(25px);
-  -webkit-backdrop-filter: blur(25px);
   align-items: center;
   overflow-y: auto;
-  border-radius: 10px;
 }
 .bg-ovly2::-webkit-scrollbar {
   width: 10px;
@@ -249,15 +229,16 @@
   border-radius: 10px;
 }
 .logo-ovly{
-  /* background: url('Images/myramid.svg'); */
+  background-repeat: no-repeat;
+  background-size: contain;
+
   height: 20vh;
   width: 10vw;
   align-items: center;
-  background-repeat: no-repeat;
-  background-size: contain;
 }
 .mapdesc{
   margin-top: 3vh;
+
   font-family: 'HYWenHei';
   font-style: normal;
   font-weight: 400;
@@ -265,10 +246,12 @@
   line-height: 24px;
   text-align: center;
   color: #FFFFFF;
+
   width: 50vw;
 }
 .title{
   margin-top: 10vh;
+
   text-align: center;
   font-family: 'HYWenHei';
   font-style: normal;
@@ -283,21 +266,20 @@
   align-items: center;
 }
 .imagedesc{
-    /* border: solid green; */
-  margin-top: 3%;
   background: url('Images/image1.svg');
   background-size: cover !important;
   background-repeat: no-repeat !important;
+
+  margin-top: 3%;
   
   width: 50vw;
   height: 40vh;
-  /* padding-bottom: 75%; */
 }
 
 .imagetitle{
-  width: 30vw;
-  align-self: flex-start;
   margin-top: 3%;
+
+  align-self: flex-start;
   font-family: 'HYWenHei';
   font-style: normal;
   font-weight: 400;
@@ -305,19 +287,49 @@
   line-height: 29px;
   text-align: justify;
   color: #FFFFFF;
+
+  width: 30vw;
 }
 .descfull{
   margin-top: 2%;
+  margin-bottom: 25px;
+
   font-family: 'HYWenHei';
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
   text-align: justify;
-  width: 50vw;
   color: #FFFFFF;
+  
+  width: 50vw;
   height: 20vh;
-  margin-bottom: 25px;
+}
+@keyframes MoveLeftRightBG {
+    0%, 100% {
+        background-position: bottom 20%  left;
+    }
+    50% {
+        background-position: bottom 20%  right;
+    }
+}
+@keyframes MoveUpDown {
+    50% {
+        bottom: 3vh;
+    }
+    0%, 100% {
+        bottom: 7vh;
+    }
+}
+@keyframes pulse {
+    0% { filter: drop-shadow(3px 4px 6px orange) }
+    50% { filter: drop-shadow(5px 12px 50px yellow) }
+    100% { filter: drop-shadow(3px 4px 6px orange) } 
+}
+@keyframes pulse-lantern {
+    0% { filter: drop-shadow(3px 4px 6px transparent) }
+    50% { filter: drop-shadow(0px 0px 19px black) }
+    100% { filter: drop-shadow(3px 4px 6px transparent) } 
 }
 @media only screen and (max-width: 1100px){
   .imagedesc{
@@ -400,7 +412,6 @@
         background-size: 450%;
     }
 }
-
 
 
 @media only screen and (max-width: 350px){
