--- a/Workspace/DefaultStyle/main-style.css
+++ b/Workspace/DefaultStyle/main-style.css
@@ -159,7 +159,7 @@ nav > ul{
     font-weight: 400;
     font-size: 21px;
     align-items: center;
-    font-weight: bold;
+    /* font-weight: bold; */
     color: rgba(255, 255, 255, 0.5);
     text-decoration: none;
     text-transform: uppercase;
