--- a/Workspace/CharacterScreen/style.css
+++ b/Workspace/CharacterScreen/style.css
@@ -36,6 +36,7 @@
     opacity: 0.85; 
 
     height: 100vh;
+    min-height: 900px;
     width: 100vw;
 
     animation: MoveLeftRightBG 60s ease-in-out infinite;
@@ -79,6 +80,7 @@
     
     max-width: calc(100vw);
     height: calc(60vh);
+    min-height: 500px;
     
 }
 .text-hero-desc{
@@ -116,6 +118,7 @@
                                     rgba(64,64,64,0) 70%, 
                                     rgb(0, 0, 0, 1) 100%), 
                         url('Images/3.svg');
+    min-height: 1000px;
     
 }
 .ctr3:hover .image3{
@@ -126,6 +129,7 @@
                                     rgba(64,64,64,0) 70%, 
                                     rgb(0, 0, 0, 1) 100%), 
                         url('Images/1.svg');
+    
 }
 .ctr4:hover .image4{
     background-image: url('Images/1.svg');
@@ -397,6 +401,7 @@
     z-index: 80;
 
     min-width: 20vw;
+    /* min-height:3000px; */
 
     transition: all 0.5s;
 }
@@ -770,5 +775,9 @@
   .bg, .bg2, .bg3, .bg4{
         background-size: 500%;
     }
+}
+@media only screen and (max-width: 600px)
+{
+    
 }
 
