--- a/Workspace/MapScreen/style.css
+++ b/Workspace/MapScreen/style.css
@@ -170,6 +170,7 @@
 }
 .close-btn{
   cursor: pointer;
+  border-radius: 20px;
 
   background-image: url('Images/xClose.svg');
   background-size: contain;
@@ -181,6 +182,10 @@
 
   height: 50px;
   width: 50px;
+  transition: .5s;
+}
+.close-btn:hover{
+  background-color: #D7B232;
 }
 
 .bg-ovly{
